--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,16 +14,25 @@ jobs:
         run: |
           npm install
           npm run build
-  test:  
+      - uses: actions/upload-artifact@main
+        with:
+          name: webpack artifacts
+          path: public/
+          
+  test:
+    needs: build
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [12.x, 14.x]
         os: [ubuntu-latest, windows-latest]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/download-artifact@main
+        with:
+          name: webpack artifacts
+          path: public
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
